@@ -36,6 +36,7 @@ Modules/
 * Fix memory leak in whoami
 * Fix internal error handling of LDAPControl_to_List()
 * Fix two memory leaks and release GIL in encode_assertion_control
+* Allow set_option() to set timeouts to infinity
 and, thanks to Michael Ströder:
 * removed unused code schema.c
 * moved code from version.c to ldapmodule.c
